--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://xxMANIAKxx.github.io/Filmoteka-team-02",
+  "homepage": "https://grzegorzkobuszewski.github.io/02-team-project-filmoteka",
   "scripts": {
     "start": "parcel src/*.html",
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /Filmoteka-team-02/"
+    "build": "parcel build src/*.html --public-url /02-team-project-filmoteka/"
   },
   "repository": {
     "type": "git",
